infrastructure/envoy-gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: envoy-gateway-class
spec:
  controllerName: envoygateway.io/gateway-controller
  description: Envoy Gateway class
